--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,17 @@
 .header {
-  padding: 1rem 0.7rem 0.1rem 0.7rem;
+  padding: 1rem 0.7rem 0.2rem 0.7rem;
   background-color: #242424;
   height: 6rem;
   position: fixed;
 }
 .genres {
+  padding-bottom: .2em;
   display: flex;
   flex-direction: row;
   gap: 0.6rem;
   overflow-x: auto;
   white-space: nowrap;
-  width: 100%;
+  width:90%;
   margin-top: 1rem;
 }
 .genre {
@@ -50,7 +51,7 @@
   width: 0.2rem;
   height: 0.2rem;
 }
-
+ 
 .genres:hover::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
