--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,19 +2,16 @@
   padding: 1rem 0.7rem 0.2rem 0.7rem;
   background-color: #242424;
   height: 6rem;
-  position: fixed;
+  position: static;
 }
 .genres {
-  padding-bottom: .2em;
   display: flex;
-  flex-direction: row;
-  gap: 0.6rem;
-  overflow-x: auto;
+  overflow-x: scroll;
   white-space: nowrap;
-  width:90%;
-  margin-top: 1rem;
+  padding: 10px;
+  gap: 1rem;
 }
-.genre {
+.genre {display: inline-block;
   background-color: #484848;
   color: #f5f5f5;
   border-radius: 0.24rem;
@@ -51,7 +48,7 @@
   width: 0.2rem;
   height: 0.2rem;
 }
- 
+
 .genres:hover::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
