--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,8 @@
   padding: 10px;
   gap: 1rem;
 }
-.genre {display: inline-block;
+.genre {
+  display: inline-block;
   background-color: #484848;
   color: #f5f5f5;
   border-radius: 0.24rem;
@@ -43,7 +44,6 @@
   scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.1);
 }
 
-/* WebKit browsers (Chrome, Safari) */
 .genres:hover::-webkit-scrollbar {
   width: 0.2rem;
   height: 0.2rem;
