--- a/src/components/Movies/movies.css
+++ b/src/components/Movies/movies.css
@@ -5,14 +5,14 @@
   padding: 1rem 1rem 1rem 1rem;
 }
 
-.movie-year{
+.movie-year {
   margin-top: 1rem;
-    font-size: 2rem;
-    color: white;
-    padding-left: .7em;
+  font-size: 2rem;
+  color: white;
+  padding-left: 0.7em;
 }
-.no-movies{
+.no-movies {
   color: white;
   font-style: italic;
-font-size: 1rem;
+  font-size: 1rem;
 }
